Modify Contact Page

--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@ SOFTWARE.
         </section>
 
         <style>
-            .asdf {background-size:cover;background-position:center;height:43vh;}
+            .asdf {background-size:cover;background-position:center;height:43vh;min-height:-webkit-fill-available;}
             .asdf > div, .asdf > div h1, .asdf > div p {transition: all 0.35s ease;opacity:0}
             .asdf > div {margin:auto;background-color:rgba(0,0,0,0.65);height:100%;width:100%}
             .asdf > div > div {position:absolute;top:50%;transform:translateY(-50%);width:100%}
@@ -268,7 +268,7 @@ SOFTWARE.
             .asdf:active > div, .asdf:active > div h1, .asdf:active > div p
              {opacity:1;transition:all 0.35s ease;transform:translate(0px, 0px)}
         </style>
-        <section class = '_track _content-section' id='test' style='margin-top:50px'>
+        <section class = '_track _content-section' id='test' style='margin-top:120px'>
             <ul class='grid-3-2-ul'>
                 <div class='asdf' style='background-image:url(assets/imgs/20180602_img0195-min.JPG);'>
                     <div>
@@ -277,12 +277,12 @@ SOFTWARE.
                             <h1 class='kor'>꿈 / 목표</h1>
                             <p class='eng'>
                                 (1)Develop creative technology that makes people happy.
-                                (2)Write novels and make a movie.
+                                (2)Write novels / make a movie.
                                 (3)Write songs.
                             </p>
                             <p class='kor'>
                                 (1)순수한 아이디어로 세상을 행복하게 바꾸기. 
-                                (2)소설 쓰기 및 영화 만들기. 
+                                (2)소설 쓰기 / 영화 제작. 
                                 (3)자작곡 쓰기
                             </p>
                         </div>
@@ -310,13 +310,10 @@ SOFTWARE.
                             <p class='eng'>
                                 I love to express myself through music; 
                                 I play piano and drum. 
-                                My favorite composers are Chopin and Bach.
-                                One of my dreams is to compose my own song.
                             </p>
                             <p class='kor'>
                                 음악을 통해 저를 표현하는 걸 좋아합니다. 
                                 피아노와 드럼을 칩니다. 
-                                쇼팽과 바흐의 음악들을 좋아합니다. 언젠가 자작곡을 쓰고 싶습니다. 
                             </p>
                         </div>
                     </div>
@@ -329,12 +326,12 @@ SOFTWARE.
                             <h1 class='kor'>여행</h1>
                             <p class='eng'>
                                 I've been to 
-                                Waterloo, Canada and California, USA in Summer '19
-                                and Swiss and many other contries in Europe in Summer '18.
+                                Waterloo, Canada and California, USA in 2019
+                                and Swiss and many other contries in Europe in 2018.
                             </p>
                             <p class='kor'>
-                                최근 저는 '19년 여름에 캐나다 워털루와 미국 캘리포니아를, 
-                                '19년 봄에 강원도를, '18년 여름에 스위스와 동유럽 여러 국가들을 여행했습니다.
+                                '19년 캐나다 워털루와 미국 캘리포니아를, 
+                                '18년 스위스와 유럽 여러 국가들을 여행했습니다.
                             </p>
                         </div>
                     </div>
@@ -362,11 +359,10 @@ SOFTWARE.
                             <h1 class='eng'>Where I Belong</h1>
                             <h1 class='kor'>서울대학교</h1>
                             <p class='eng'>
-                                I am currently in the integrated Ph.D course at the Department of Mathematical Sciences, Seoul National University (SNU). 
-                                I graduated from SNU in 2020.
+                                I'm currently in the integrated Ph.D course at the Department of Mathematical Sciences, Seoul National University. 
                             </p>
                             <p class='kor'>
-                                현재 저는 서울대학교 수리과학부 석박통합과정에 있습니다. 서울대학교 수리과학부 학부를 2020년 졸업했습니다.
+                                현재 저는 서울대학교 수리과학부 석박통합과정에 있습니다.
                             </p>
                         </div>
                     </div>
@@ -498,20 +494,20 @@ SOFTWARE.
             #more-chronicle > div{position:absolute;bottom:0;left:50%;width:50vw; background:white;transform: translateX(-50%);border:1pt solid black}
             #more-chronicle > div:hover {cursor: pointer;}
             #more-chronicle > div h1 {font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:15px;color:black}
-            .trivia {background-color:rgba(255,255,164,0.2);padding:80px 0;margin:12vh 0}
+            .trivia {background-color:rgba(255,255,164,0.2);padding:150px 0;margin-top:80px;margin-bottom:120px}
             .trivia h1 {font-size:45pt;padding-bottom:15px;margin-bottom:0}
-            .trivia li {padding-bottom:10px;font-size:12pt!important;font-family:"noto-eng-i","noto-kor-i"!important}
+            .trivia li {padding-bottom:10px;font-size:12pt!important;font-family:"noto-eng-i","noto-kor"!important}
         </style>
 
 
         <section class="_track _content-section" id = "trivia">
             <div class='trivia'>
-                <h1 class='eng wide-piece'>A Few Fun Facts About Me</h1>
-                <h1 class='kor wide-piece'>트리비아</h1>
+                <h1 class='eng wider-piece'>A Few Fun Facts About Me</h1>
+                <h1 class='kor wider-piece'>트리비아</h1>
 
                 <!-- <img src='assets/imgs/20191005_200341-min.jpg' style='object-fit: cover;'> -->
 
-                <ul class = 'wide-piece'>
+                <ul class = 'wider-piece'>
                     <li class='eng'>
                         My first programming language is Java, the most familiar one is C, and the most tempting one is Haskell.
                     </li>
@@ -519,10 +515,10 @@ SOFTWARE.
                         제 첫 프로그래밍 언어는 Java이고, 가장 익숙한 언어는 C이고, 가장 매력적인 언어는 Haskell입니다.
                     </li>
                     <li class='eng'>
-                        I love the moments when I learn new emotions through art. 'Eternal Sunshine of the Spotless Mind', 'Up in the Air', 'The Perks of Being a Wallflower' and 'The Best Offer' gave me that moments.
+                        I love the moments when I learn new emotions through art. 'Eternal Sunshine of the Spotless Mind' and 'Up in the Air' gave me that moments.
                     </li>
                     <li class='kor'>
-                        새로운 감정을 느끼게 하는 예술작품들을 좋아합니다. 영화 '이터널 선샤인', '인 디 에어', '월 플라워', '베스트 오퍼' 처럼요.
+                        새로운 감정을 느끼게 하는 예술작품들을 좋아합니다. 영화 '이터널 선샤인'와 '인 디 에어'처럼요.
                     </li>
                     <li class='eng'>
                         I play piano since I was 5 and drum since I was 17.
@@ -689,7 +685,7 @@ SOFTWARE.
                         <h2 class='kor'>뇌출혈 공연 - 드럼</h2>
                         <p class='kor'>수리과학부 밴드모임 뇌출혈 중 팀 '승보'에서 드럼으로 공연했다.</p>
                         <h2 class='eng'>'Natural' Performance - Drum Player</h2>
-                        <p class='eng'>As a member of the team 'Seung-bo', played drum at the 'Natural' regular performance. ('Natural' is the group of departmental bands)</p>
+                        <p class='eng'>As a member of the team 'Seung-bo', played drum at the 'Natural' regular performance ('Natural' is the group of departmental bands).</p>
                     </div>
                     <div class='width100 timeline-year' id='2014'>
                         <h1>2014</h1>
@@ -718,7 +714,7 @@ SOFTWARE.
                         <p class='kor'>포항공대에서 주최된 학부생 수학 캠프에 참가했다. 해당 캠프에서 서울대, 포항공대, 이화여대의 수학과 학부생들과 교류했다.</p>
                         <h2 class='eng'>IBS-CGP Math Festival</h2>
                         <p class='eng'>
-                            Took a part in IBS-CGP Math Festival in Postech. Interacted with math-major students from SNU, Postech and Ewha Womans University</p>
+                            Took a part in IBS-CGP Math Festival in Postech. Interacted with math-major students from SNU, Postech and Ewha Womans University.</p>
                     </div>
                     <div class='width100 timeline-year' id='2016'>
                         <h1>2016</h1>
@@ -736,7 +732,7 @@ SOFTWARE.
                         <h2 class='kor'>서울대 암호랩 연구인턴</h2>
                         <p class='kor'>연구인턴을 시작했다. 동형암호에 대해 공부했다. 2020년 2월까지 진행했다.</p>
                         <h2 class='eng'>Research Intern - SNU Crypto Lab</h2>
-                        <p class='eng'>Started a research intern (Jul '18 ~ Feb '20). Studied about homomorphic encryption. </p>
+                        <p class='eng'>Started a research intern (Jul '18 ~ Feb '20). Studied about homomorphic encryption.</p>
 
                         <h2 class='kor'>전자피아노 구매</h2>
                         <h2 class='eng'>Bought an Electric Piano</h2>
