--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ SOFTWARE.
                 <h2 class='kor'>석박통합과정 • 서울대학교 수리과학부</h2>
                 <h2 class='eng'>Integrated PhD StudentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
                 <p class='kor'>생각하고 표현하길 좋아하는 대학원생입니다. 암호로 수학을 활용하는 걸 좋아합니다. 피아노와 드럼을 치며, 영화와 글짓기에도 관심이 많습니다.</p>
-                <p class='eng'>Hi, I am a graduate student who likes to think and express. I like the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
+                <p class='eng'>Hi, I am a graduate student who likes to think and express. I enjoy the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
                 </p>
                 <ul>
                     <li>
