--- a/resume.html
+++ b/resume.html
@@ -494,7 +494,7 @@ SOFTWARE.
                 <h1 class='kor'>장학금</h1>
                 <ul class='brief-ul'>
                     <li>   
-                        <h1 class='eng'>The Presidental Science Scholarship</h1>
+                        <h1 class='eng'>The Presidential Science Scholarship</h1>
                         <h1 class='kor'>대통령과학장학금</h1>
                         <p class='eng'>Academic Grant: Tuition + $5,000/yr for 4 years</p>
                         <p class='kor'>지원내용: 등록금전액 + 4년간 연간 500만원</p>
