--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@ SOFTWARE.
     font-size: 14pt;
     padding-left: 5px;
     color: #fffff4;
-    opacity:0.9;
+    opacity:1;
     margin-bottom: 5px;
 }
 .gform fieldset input:disabled,
@@ -87,7 +87,7 @@ SOFTWARE.
     padding-left:15px;
     padding-right:15px;
     color:black;
-    opacity:0.4;
+    opacity:0.5;
     transition:0.4s ease-in-out;
 }
 .gform fieldset input:focus {
@@ -111,7 +111,7 @@ SOFTWARE.
     padding-right:15px;
     color:black;
     resize:none;
-    opacity:0.4;
+    opacity:0.5;
     transition:0.4s ease-in-out;
 }
 .gform fieldset textarea:focus {
@@ -128,8 +128,8 @@ SOFTWARE.
     border-radius: 10px;
     height:50px;
     color:#fffff4;
-    background-color: #222222;
-    opacity:0.8;
+    background-color: black;
+    opacity:0.9;
     margin-top: 10px;
     left:50%;
     transform: translateX(-50%);
@@ -175,12 +175,10 @@ SOFTWARE.
 }
 .contactlinks{
     text-align: center;
-    padding-left: 10%;
-    padding-right: 10%;    
     color: #fffff4;
-    opacity:0.9;
+    opacity:1;
     font-family: 'noto-eng-i','noto-kor-i';
-    font-size:12pt;
+    font-size:13pt;
     margin-bottom: 20px!important;
 }
 .contactlinks a{
@@ -233,8 +231,7 @@ SOFTWARE.
     <div class='load-menubar'></div>
 
     <!-- header -->
-    <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
-        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
+    <!-- <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
 
         <div class='_profile'>
             <a class='eng' style='color:rgb(200,200,200)'>
@@ -262,13 +259,14 @@ SOFTWARE.
             제게 연락하세요!
         </div>
         <img src = 'assets/icons/arrow-down.png'/>
-    </div>
+    </div> -->
 
-    <div class='_contents' style='border:none'>
+    <div class='_contents' style='border:none;background-image:url(assets/imgs/20180519-hello-min.JPG);background-repeat: no-repeat;background-position: center;background-size:cover'>
+        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
-        <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
+        <!-- <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div> -->
 
-        <section class="_content-section _track" id = "contact" style="background-color:#777777;text-align:center">
+        <section class="_content-section _track" id = "contact" style="text-align:center;z-index:99;padding-top:150px;padding-bottom:50px;">
             <h1 class='eng' style='position:relative;font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>Contact</h1>
             <h1 class='kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>메모 남기기</h1>
 
