Update the picture in about page

--- a/about.html
+++ b/about.html
@@ -211,7 +211,8 @@ SOFTWARE.
 
         <section class='_track _content-section' id='passion' style='background-color:white;padding:50px 0px'>
             <div class='flex-block wider-piece'>
-                <img src='assets/imgs/1530031945830.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' />
+                <!-- <img src='assets/imgs/1530031945830.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' /> -->
+                <img src='assets/imgs/20180519_091145-1-min.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' />
                 
                 <div style='height:50px;margin:0'></div>
                 
@@ -245,7 +246,7 @@ SOFTWARE.
                 </div>
             </div>
 
-            <div style='width: 300px; background:rgb(24,24,30);border-radius: 10px;margin:auto;margin-top:100px'>
+            <div style='width: 300px; background:rgb(24,24,30);border-radius: 10px;margin:auto;margin-top:80px'>
                 <a class='eng' href='/resume.html?lang=eng'>
                     <h1 style='font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:10px;color:white'>SEE MY RÉSUMÉ</h1>
                 </a>
