--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@ SOFTWARE.
         <section class='_track _content-section' id='passion' style='background-color:white;padding:50px 0px'>
             <div class='flex-block wider-piece'>
                 <!-- <img src='assets/imgs/1530031945830.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' /> -->
-                <img src='assets/imgs/20180519_091145-1-min.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' />
+                <img src='assets/imgs/1554439777131-1-min.jpg' style='max-width:320px;width:70%;height:auto;margin:0;padding:0' />
                 
                 <div style='height:50px;margin:0'></div>
                 
@@ -269,7 +269,7 @@ SOFTWARE.
             .asdf:active > div, .asdf:active > div h1, .asdf:active > div p
              {opacity:1;transition:all 0.35s ease;transform:translate(0px, 0px)}
         </style>
-        <section class = '_track _content-section' id='test' style='margin-top:120px'>
+        <section class = '_track _content-section' id='test' style='margin:120px auto'>
             <ul class='grid-3-2-ul'>
                 <div class='asdf' style='background-image:url(assets/imgs/20180602_img0195-min.JPG);'>
                     <div>
@@ -495,7 +495,7 @@ SOFTWARE.
             #more-chronicle > div{position:absolute;bottom:0;left:50%;width:50vw; background:white;transform: translateX(-50%);border:1pt solid black}
             #more-chronicle > div:hover {cursor: pointer;}
             #more-chronicle > div h1 {font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:15px;color:black}
-            .trivia {background-color:rgba(255,255,164,0.2);padding:150px 0;margin-top:80px;margin-bottom:120px}
+            .trivia {background-color:rgba(255,255,164,0.2);padding:150px 0;margin-top:30px;margin-bottom:120px}
             .trivia h1 {font-size:45pt;padding-bottom:15px;margin-bottom:0}
             .trivia li {padding-bottom:10px;font-size:12pt!important;font-family:"noto-eng-i","noto-kor"!important}
         </style>
