--- a/index.html
+++ b/index.html
@@ -145,40 +145,40 @@ SOFTWARE.
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
             <a class='eng' href='/resume.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(180,180,230)'>
+                color:white'>
                 RESUME</a>
             <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(180,180,230)'>
-                이력서</a>
+                color:white'>
+                이력</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
             <a class='eng' href='/about.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(255,255,164)'>
+                color:white'>
                 ABOUT</a>
             <a class='kor' href='/about.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(255,255,164)'>
+                color:white'>
                 소개</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
             <a class='eng' href='/posts.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(200,255,200)'>
+                color:white'>
                 POSTS</a>
             <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(200,255,200)'>
+                color:white'>
                 글</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
             <a class='eng' href='/contact.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(200,200,200)'>
+                color:white'>
                 CONTACT</a>
             <a class='kor' href='/contact.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
-                color:rgb(200,200,200)'>
+                color:white'>
                 연락</a>                
         </section>
 
