about font size

--- a/about.html
+++ b/about.html
@@ -137,15 +137,15 @@ SOFTWARE.
                 소개
             </a>
             <p class='eng'>
-                Hi, I'm <b style='font-size:30pt'>Jai Hyun Park</b>.
-                I live in <b style='font-size:22pt'>Seoul</b>, Republic of Korea.
-                I love spending time on <b style='font-size:25pt'>playing piano</b> and <b style='font-size:28pt'>programming</b style='font-size:28pt'>.
+                Hi, I'm <b>Jai Hyun Park</b>.
+                I live in <b>Seoul</b>, Republic of Korea.
+                I love spending time on <b>playing piano</b> and <b>programming</b>.
                 My favorite movie is 'Eternal Sunshine of the Spotless Mind'.
             </p>
             <p class='kor'>
-                안녕하세요, 저는 <b style='font-size:30pt'>박재현</b>입니다.
-                <b style='font-size:22pt'>서울</b>에 삽니다.
-                여가시간에는 <b style='font-size:25pt'>피아노 연주</b>와 <b style='font-size:28pt'>프로그래밍</b style='font-size:28pt'>을 합니다.
+                안녕하세요, 저는 <b>박재현</b>입니다.
+                <b>서울</b>에 삽니다.
+                여가시간에는 <b>피아노 연주</b>와 <b>프로그래밍</b>을 합니다.
                 가장 좋아하는 영화는 '이터널 선샤인'입니다.
             </p>
         </div>
