better look and feel: black and white

--- a/contact.html
+++ b/contact.html
@@ -262,13 +262,13 @@ SOFTWARE.
     </div> -->
 
     <div class='_contents' style='border:none;background-image:url(assets/imgs/20180519-hello-min.JPG);background-repeat: no-repeat;background-position: center;background-size:cover'>
-        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
+        <div class='_overlay' style="background-color: rgba(24,24,24, 0.8)"></div>
 
         <!-- <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div> -->
 
         <section class="_content-section _track" id = "contact" style="text-align:center;z-index:99;padding-top:150px;padding-bottom:50px;">
-            <h1 class='eng' style='position:relative;font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>Contact</h1>
-            <h1 class='kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>메모 남기기</h1>
+            <h1 class='eng' style='position:relative;font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid whte'>Contact</h1>
+            <h1 class='kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:white;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid white'>메모 남기기</h1>
 
             <form class='gform big-piece' method='POST' data-email='jhyunp@snu.ac.kr'
                 action='https://script.google.com/macros/s/AKfycbwFAZ8Ey5bW-Su2NQVU2AjyMNT-eMz96n0LR3MpMPbzJCgYyGA/exec'
