--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ SOFTWARE.
         .main-profile *{position:relative!important}
         .main-profile > img {max-width:260px;width:40%;position:relative;margin-left:auto;margin-right:auto}
         .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:auto;margin-left:auto}
-        .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
-        .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
-        .main-profile p {font-family:'noto-eng','noto-kor';font-size:13pt;color:#ffffea;text-align:left;margin-top:20px}
+        .main-profile h1 {font-family:'noto-eng','noto-kor';font-size:33pt;color:white}
+        .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:10pt;color:#bababa}
+        .main-profile p {font-family:'noto-eng-i','noto-kor-i';font-size:13pt;color:white;text-align:left;margin-top:20px}
         .main-profile ul {margin-top:20px;display:flex}
         .main-profile li {text-align:left;display:flex;margin-left:0;margin-right:20px}
         .main-profile li a {display:flex}
         .main-profile li img {width:22px;height:22px}
-        .main-profile li p {display:inline;margin:auto 5px;font-family:'noto-eng','noto-kor';font-size:9.5pt;text-align:left;color:#ffffea;}
+        .main-profile li p {display:inline;margin:auto 5px;font-family:'noto-eng-i','noto-kor-i';font-size:9.5pt;text-align:left;color:white;}
         @media screen and (max-width: 1000px) {
             .main-profile{margin-top:110px}
             /* .main-profile > img {margin-top:150px;} */
@@ -85,7 +85,7 @@ SOFTWARE.
 
     <!-- header -->
     <header class="tall-header" id='header' style='top:0;padding-bottom:70px;background-image:url(assets/imgs/20190206_004354.jpg)'>
-        <div class='_overlay' style="background-color: rgba(24,24,32,0.95)"></div>
+        <div class='_overlay' style="background-color: rgba(24,24,24,0.95)"></div>
 
         <div class='flex-block main-profile'>
             <img src='assets/imgs/profile-picture.png'>
@@ -122,7 +122,7 @@ SOFTWARE.
         </div>
     </header>
 
-    <div class="_see-more" style='background-color:rgb(24,24,32);'>
+    <div class="_see-more" style='background-color:rgb(24,24,24);'>
         <div class='eng'>
             See my contents
         </div>
@@ -143,41 +143,41 @@ SOFTWARE.
     
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
-            <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/resume.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <div class='_overlay' style='background-color:rgba(24,24,24,0.8)'></div>
+            <a class='eng' href='/resume.html?lang=eng' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 RESUME</a>
-            <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 이력</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
-            <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/about.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <div class='_overlay' style='background-color:rgba(24,24,24,0.8)'></div>
+            <a class='eng' href='/about.html?lang=eng' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 ABOUT</a>
-            <a class='kor' href='/about.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='kor' href='/about.html?lang=kor' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 소개</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
-            <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/posts.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <div class='_overlay' style='background-color:rgba(24,24,24,0.8)'></div>
+            <a class='eng' href='/posts.html?lang=eng' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 POSTS</a>
-            <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 글</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
-            <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/contact.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <div class='_overlay' style='background-color:rgba(24,24,24,0.8)'></div>
+            <a class='eng' href='/contact.html?lang=eng' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 CONTACT</a>
-            <a class='kor' href='/contact.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='kor' href='/contact.html?lang=kor' style='font-family:"noto-eng-ii","noto-kor-ii";font-size:30pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:white'>
                 연락</a>                
         </section>
@@ -222,7 +222,7 @@ SOFTWARE.
                     CONTACT<a href='contact.html'><img src='assets/icons/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                 </div>
                 <p>
-                    <b style='font-size:35pt'>Contact</b> me with some <b style='font-size:25pt'>links!</b>
+                    <b style='font-size:30pt'>Contact</b> me with some <b style='font-size:25pt'>links!</b>
                     <b>Or,</b> You also can drop me a <b style='font-size:30pt'>memo!</b>
                 </p>
             </div>
