--- a/posts.html
+++ b/posts.html
@@ -59,13 +59,13 @@ SOFTWARE.
 
     <!-- header -->
     <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
-        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
+        <div class='_overlay' style="background-color: rgba(24,24,24, 0.8)"></div>
 
         <div class='_profile'>
-            <a class='eng' style='color:rgb(200,255,200)'>
+            <a class='eng' style='color:white'>
                 POSTS
             </a>
-            <a class='kor' style='color:rgb(200,255,200)'>
+            <a class='kor' style='color:white'>
                 글
             </a>
             <p class='eng'>
