--- a/resume.html
+++ b/resume.html
@@ -175,13 +175,13 @@ SOFTWARE.
 
     <!-- header -->
     <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20190814-sac2019.jpg)'>
-        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
+        <div class='_overlay' style="background-color: rgba(24,24,24, 0.8)"></div>
 
         <div class='_profile'>
-            <a class='eng' style='color:rgb(180,180,230)'>
+            <a class='eng' style='color:white'>
                 RÉSUMÉ
             </a>
-            <a class='kor' style='color:rgb(180,180,230)'>
+            <a class='kor' style='color:white'>
                 이력서
             </a>
             <p class='eng'>
