--- a/default.html
+++ b/default.html
@@ -113,9 +113,9 @@ SOFTWARE.
     </div>
 
     <footer id='footer'>
-        <div class='_overlay' style='background-color: rgb(24,24,30)'></div>
+        <div class='_overlay' style='background-color: rgb(24,24,24)'></div>
         <div class='_footer-line'>
-            <h1>ⓒ 2019 <a href='http://jaihyunp.github.io/'>Jaihyun Park</a></h1>
+            <h1>ⓒ 2019-2020 <a href='http://jaihyunp.github.io/'>Jaihyun Park</a></h1>
             <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
             <p>This page is under construction.</p>
             <p class='current-version'></p>
