micro update on design

--- a/about.html
+++ b/about.html
@@ -263,8 +263,8 @@ SOFTWARE.
             .asdf > div, .asdf > div h1, .asdf > div p {transition: all 0.35s ease;opacity:0}
             .asdf > div {margin:auto;background-color:rgba(0,0,0,0.65);height:100%;width:100%}
             .asdf > div > div {position:absolute;top:50%;transform:translateY(-50%);width:100%}
-            .asdf h1 {text-align:center;padding-bottom:30px;margin:auto;color:white;transform:translateY(-10px)}
-            .asdf p {padding:0 15%;margin:auto;color:white;transform: translateY(20px);}
+            .asdf h1 {text-align:center;padding-bottom:30px;margin:auto;color:white;transform:translateY(-10px);font-size:15pt;font-family:"noto-eng-i","noto-kor-i"}
+            .asdf p {padding:0 15%;margin:auto;color:white;transform: translateY(20px);font-size:12pt;font-family:"noto-eng-ii","noto-kor-ii"}
             .asdf:hover > div, .asdf:hover > div h1, .asdf:hover > div p,
             .asdf:active > div, .asdf:active > div h1, .asdf:active > div p
              {opacity:1;transition:all 0.35s ease;transform:translate(0px, 0px)}
