--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ SOFTWARE.
         .main-profile *{position:relative!important}
         .main-profile > img {max-width:260px;width:40%;position:relative;margin-left:auto;margin-right:auto}
         .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:auto;margin-left:auto}
-        .main-profile h1 {font-family:'noto-eng','noto-kor';font-size:33pt;color:white}
+        .main-profile h1 {font-family:'noto-eng','noto-kor';font-size:30pt;color:white}
         .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:10pt;color:#bababa}
-        .main-profile p {font-family:'noto-eng-i','noto-kor-i';font-size:13pt;color:white;text-align:left;margin-top:20px}
+        .main-profile p {font-family:'noto-eng-ii','noto-kor-ii';font-size:13pt;color:white;text-align:left;margin-top:20px}
         .main-profile ul {margin-top:20px;display:flex}
         .main-profile li {text-align:left;display:flex;margin-left:0;margin-right:20px}
         .main-profile li a {display:flex}
