update resume & remove detailed history

--- a/about.html
+++ b/about.html
@@ -539,7 +539,7 @@ SOFTWARE.
             </div>
         </section>            
 
-
+<!-- 
         <section class='_track _content-section' id='timeline' style='background-color:white'>
             <div class='big-piece timeline'>
                 <div class='width100' style='border-right-style:dotted;height:20px'></div>
@@ -786,7 +786,7 @@ SOFTWARE.
                     <h1>See More</h1>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- <section class="_track _content-section _article-section" id = "upcoming-events" style='background-color:rgba(184,184,184,0.8)'>
