--- a/resume.html
+++ b/resume.html
@@ -438,6 +438,14 @@ SOFTWARE.
 
                 <ul class='brief-ul'>
                     <li>   
+                        <h1>Polynomial Approx. on Wide Domain and Logistic Regression over Encrypted Data</h1>
+                        <p class='eng'>Online | 2020.10.24.</p>
+                        <p class='kor'>온라인 | 2020.10.24.</p>
+                        <p class='eng'>@2020 KMS Annual Meeting</p>
+                        <p class='kor'>@2020 대한수학회 가을 연구발표회 </p>
+                    </li>  
+
+                    <li>   
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
                         <p class='eng'>Hong-ik Univ., Seoul, Korea | 2019.10.26.</p>
                         <p class='kor'>홍익대학교, 서울, 한국 | 2019.10.26.</p>
@@ -462,6 +470,23 @@ SOFTWARE.
                 <h1 class='eng'>Awards</h1>
                 <h1 class='kor'>수상</h1>
                 <ul class='brief-ul'>
+                    <li>   
+                        <h1 class='eng'>Excellence Awards @Korea Cryptography Contest</h1>
+                        <h1 class='kor'>우수상 @국가암호공모전</h1>
+                        <p>2020.10.</p>
+                        <p class='eng'>- Korea Internet and Security Agency</p>
+                        <p class='kor'>- KISA</p>
+                    </li>  
+
+                    <li>   
+                        <h1 class='eng'>Awards for Excellence in Teaching</h1>
+                        <h1 class='kor'>우수강의조교</h1>
+                        <p class='eng'>2020.9. | For Teaching Calculus Practice</p>
+                        <p class='kor'>2020.9. | 수학연습과목</p>
+                        <p class='eng'>- Seoul National University</p>
+                        <p class='kor'>- 서울대학교</p>
+                    </li>  
+
                     <li>   
                         <h1 class='eng'>Seoul National University Dean's list</h1>
                         <h1 class='kor'>서울대학교 Dean's list</h1>
