--- a/resume.html
+++ b/resume.html
@@ -471,8 +471,8 @@ SOFTWARE.
                 <h1 class='kor'>수상</h1>
                 <ul class='brief-ul'>
                     <li>   
-                        <h1 class='eng'>Excellence Awards @Korea Cryptography Contest</h1>
-                        <h1 class='kor'>우수상 @국가암호공모전</h1>
+                        <h1 class='eng'>Excellence Awards ($2,000) @Korea Cryptography Contest</h1>
+                        <h1 class='kor'>우수상 ($2,000) @국가암호공모전</h1>
                         <p>2020.10.</p>
                         <p class='eng'>- Korea Internet and Security Agency</p>
                         <p class='kor'>- KISA</p>
