--- a/resume.html
+++ b/resume.html
@@ -417,7 +417,7 @@ SOFTWARE.
                         <p>@Selected Areas in Cryptography 2019 Preceeding</p>
                     </li>  
 
-                    <li>   
+                    <li>
                         <h1 class='eng'>
                             Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
@@ -471,11 +471,19 @@ SOFTWARE.
                 <h1 class='kor'>수상</h1>
                 <ul class='brief-ul'>
                     <li>   
+                        <h1 class='eng'>One of the Winners of Track 1 @iDASH 2020</h1>
+                        <h1 class='kor'>Track1 공동우승 @iDASH 2020</h1>
+                        <p>2020.12.</p>
+                        <p class='eng'>- National Institutes of Health (NIH)</p>
+                        <p class='kor'>- National Institutes of Health (NIH)</p>
+                    </li>  
+
+                    <li>   
                         <h1 class='eng'>Excellence Awards ($2,000) @Korea Cryptography Contest</h1>
-                        <h1 class='kor'>우수상 ($2,000) @국가암호공모전</h1>
+                        <h1 class='kor'>우수상 @국가암호공모전</h1>
                         <p>2020.10.</p>
                         <p class='eng'>- Korea Internet and Security Agency</p>
-                        <p class='kor'>- KISA</p>
+                        <p class='kor'>- 한국인터넷진흥원</p>
                     </li>  
 
                     <li>   
