add TA experiences

--- a/resume.html
+++ b/resume.html
@@ -396,6 +396,22 @@ SOFTWARE.
                     </li>
                 </ul>
             </div>
+
+
+            <div id='ta' class='big-piece subsection'>
+                <h1 class='eng'>Teaching Experiences</h1>
+                <h1 class='kor'>교육 활동</h1>
+                <ul class='brief-ul'>
+                    <li>   
+                        <h1 class='eng'>Differential and Integral Calculus</h1>
+                        <h1 class='kor'>미적분학 연습</h1>
+                        <p>2020.3. - </p>
+                        <p class='eng'>@Seoul National University</p>
+                        <p class='kor'>@서울대학교</p>
+                    </li>  
+                </ul>
+            </div>
+
         </section>
         
         <section class="_track _content-section _article-section " id = "research">
@@ -414,7 +430,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>Jung Hee Cheon, Duhyeong Kim, <b>Jai Hyun Park</b></p>
                         <p class='kor'>김두형, <b>박재현</b>, 천정희</p>
-                        <p>@Selected Areas in Cryptography 2019 Preceeding</p>
+                        <p>In International Conference on Selected Areas in Cryptography (SAC), pp. 227-249. Springer, Cham, 2019</p>
                     </li>  
 
                     <li>
@@ -438,26 +454,27 @@ SOFTWARE.
 
                 <ul class='brief-ul'>
                     <li>   
-                        <h1>Polynomial Approx. on Wide Domain and Logistic Regression over Encrypted Data</h1>
-                        <p class='eng'>Online | 2020.10.24.</p>
-                        <p class='kor'>온라인 | 2020.10.24.</p>
-                        <p class='eng'>@2020 KMS Annual Meeting</p>
-                        <p class='kor'>@2020 대한수학회 가을 연구발표회 </p>
+                        <h1>Polynomial Approximation on Wide Domain and Logistic Regression over Encrypted Data</h1>
+                        <p class='eng'>@2020 KMS Annual Meeting in Online | 2020.10.24.</p>
+                        <p class='kor'>@2020 대한수학회 가을 연구발표회, 온라인 | 2020.10.24. </p>
                     </li>  
 
                     <li>   
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
-                        <p class='eng'>Hong-ik Univ., Seoul, Korea | 2019.10.26.</p>
-                        <p class='kor'>홍익대학교, 서울, 한국 | 2019.10.26.</p>
-                        <p class='eng'>@2019 KMS Annual Meeting</p>
-                        <p class='kor'>@2019 대한수학회 가을 연구발표회 </p>
+                        <!-- <p class='eng'>Hong-ik Univ., Seoul, Korea | 2019.10.26.</p>
+                        <p class='kor'>홍익대학교, 서울, 한국 | 2019.10.26.</p> -->
+                        <p class='eng'>@2019 KMS Annual Meeting in Hong-ik University, Seoul, Korea | 2019.10.26</p>
+                        <p class='kor'>@2019 대한수학회 가을 연구발표회, 홍익대학교, 서울, 한구 | 2019.10.26</p>
+                        <p class='eng'>@2019 Selected Areas in Cryptography (SAC) in University of Waterloo, Toronto, Canada | 2019.8.14.</p>
+                        <p class='kor'>@2019 Selected Areas in Cryptography (SAC), 워털루대학교, 토론토, 캐나다 | 2019.8.14.</p>
+
                     </li>  
-                    <li>   
+                    <!-- <li>   
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
                         <p class='eng'>Univ. of Waterloo, Toronto, Canada | 2019.8.14.</p>
                         <p class='kor'>워털루대학교, 토론토, 캐나다 | 2019.8.14.</p>
                         <p>@2019 Selected Areas in Cryptography</p>
-                    </li>  
+                    </li>   -->
                 </ul>
             </div>
         </section>
@@ -505,8 +522,8 @@ SOFTWARE.
                     </li>  
 
                     <li>   
-                        <h1 class='eng'>Silver and Bronze Awards @Humantech Paper Award</h1>
-                        <h1 class='kor'>은상 및 동상 @휴먼테크논문대상</h1>
+                        <h1 class='eng'>Silver and Bronze Awards @Humantech Paper Award for High Schools</h1>
+                        <h1 class='kor'>은상 및 동상 @휴먼테크논문대상 고등부</h1>
                         <p>2012.2.17.</p>
                         <p class='eng'>- Samsung Electronics Co., Ltd.</p>
                         <p class='kor'>- 삼성전자 Co., Ltd.</p>
