Fix errors on disqus

--- a/tags.html
+++ b/tags.html
@@ -78,6 +78,11 @@ SOFTWARE.
                         diary</a></li>
                     <li class='post-keyword'><a href='tags.html#web'>
                         web</a></li>
+                    <li class='post-keyword'><a href='tags.html#cryptology'>
+                        cryptology</a></li>
+                    <li class='post-keyword'><a href='tags.html#iDASH'>
+                        iDASH</a></li>
+                        
                 </ul>
             </div>
     
@@ -103,6 +108,20 @@ SOFTWARE.
             <h1>web</h1>
             <ul class='load-all-posts load-posts' style='margin-top:20px'>
                 <li src='posts/hello-world.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='cryptology'>
+            <h1>cryptology</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/idash2020.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='web'>
+            <h1>web</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/idash2020.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
 
