Add 'techniques' to resume page
+ minor updates in posts.
+ minor updates in about page.

--- a/about.html
+++ b/about.html
@@ -508,7 +508,7 @@ SOFTWARE.
 
                 <!-- <img src='assets/imgs/20191005_200341-min.jpg' style='object-fit: cover;'> -->
 
-                <ul class = 'wider-piece'>
+                <ul class = 'wider-piece' style='padding-left:15px'>
                     <li class='eng'>
                         My first programming language is Java, the most familiar one is C, and the most tempting one is Haskell.
                     </li>
